Modified header z-index to avoid labels travel over it.

--- a/board/css/pentaboard.css
+++ b/board/css/pentaboard.css
@@ -25,7 +25,7 @@ header
   position: fixed;
   top: 0;
   padding: 0.5em 2em;
-  z-index: 20;
+  z-index: 2000;
   background-color: #2e3c46;
   width: 100%;
   height: 4em;
